frontend/test/should_pass/computations_def_decl2b.grg
one() : int
{
	def var res:int;
	res = 1;
	if(false) {
		def var resres:int = 0;
	} else if(true) {
		def var resres:int = 1;
	} else {
		def var resres:int = 2;
	}
	return(res);
}

test t : (int)
{
	def var res:int;
	
	independent {
		yield {
			def var resres:int;
			resres = one() + 2;
			yield res = resres;
		}
		yield {
			def var resres:int;
			resres = one() + 2;
			yield res = resres;
		}
	}
	
	return (res);
}

rule r : (int)
{	
	modify {
		def var res:int;
		
		eval { 
			def var resres:int;
			resres = one() + 2;
			yield res = resres;
		}
		eval { 
			def var resres:int;
			resres = one() + 2;
			yield res = resres;
		}
		
		return (res);
	}
}
