frontend/test/should_fail/computations_if_else_004.grg
njet(var x:int) : (int)
{
	if(x==1)
		return(1);
	return(0);
}
